# yann

./: Act.hs  CHANGELOG.md  CList.hs  Compile.hs  LA.hs  Net.hs  Scalar.hs  SomeNet.hs  yann.cabal
exe/: Main.hs
src/: Act.hs  Diff.hs  LA.hs  Net.hs  Rng.hs  Sample.hs  Scalar.hs  Train.hs
