cabal-version:      3.0
name:               yann
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Machine Learning
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      LA,
      Scalar,
      Act,
      Net,

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
      GeneralizedNewtypeDeriving,
      DeriveFunctor,
      DeriveTraversable,
      DeriveTraversable,
      StandaloneDeriving,
      DerivingVia,
      MultiParamTypeClasses,
      BlockArguments,
      ImportQualifiedPost,
      DataKinds,
      KindSignatures,
      ScopedTypeVariables,
      TypeOperators,
      TypeFamilies,
      GADTs,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      UndecidableInstances,
      TypeSynonymInstances,
      TypeData,

    build-depends:
      base,
      vector,
      binary,
      tf-random

    hs-source-dirs:   src
    default-language: Haskell2010

