cabal-version:      3.0
name:               yann
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Machine Learning
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -ddump-simpl -dsuppress-all

common exts
  default-extensions:
    GeneralizedNewtypeDeriving,
    StandaloneDeriving,
    MultiParamTypeClasses,
    BlockArguments,
    ImportQualifiedPost,
    DataKinds,
    KindSignatures,
    ScopedTypeVariables,
    TypeOperators,
    TypeFamilies,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    TypeData,



library
    import: warnings, exts
    exposed-modules:
      LA,
      Scalar,
      Act,
      Net,

    -- LANGUAGE extensions used by modules in this package.
    build-depends:
      base,
      vector,
      binary,
      tf-random

    hs-source-dirs:   src
    default-language: Haskell2010

executable test-net
  import: warnings, exts
  hs-source-dirs: exe
  main-is: Main.hs
  build-depends:
    base, binary, yann
  default-language: Haskell2010



