cabal-version:      3.0
name:               yann
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Machine Learning
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -O2 -threaded

common exts
  default-extensions:
    GeneralizedNewtypeDeriving,
    StandaloneDeriving,
    MultiParamTypeClasses,
    BlockArguments,
    ImportQualifiedPost,
    DataKinds,
    KindSignatures,
    ScopedTypeVariables,
    TypeOperators,
    TypeFamilies,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    TypeData,
    OverloadedStrings,
    RankNTypes,
    ConstraintKinds,
    NoStarIsType,
    TupleSections,
    BangPatterns,



library
    import: warnings, exts
    exposed-modules:
      LA,
      Act,
      Net,
      Train,
      Sample,
      Rng

    -- LANGUAGE extensions used by modules in this package.
    build-depends:
      base,
      vector,
      binary,
      pretty,
      parallel,
      tf-random

    hs-source-dirs:   src
    default-language: Haskell2010

executable test-net
  import: warnings, exts
  hs-source-dirs: exe
  main-is: Main.hs
  build-depends:
    base, binary, yann, pretty, vector,
    ansi-terminal

  default-language: Haskell2010



